[tool.poetry]
name = "imable-backend"
version = "0.1.0"
description = ""
authors = ["\"Alin Mihaila\" <\"alin.mh996@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi-users = "^6.0.0"
uvicorn = "^0.13.4"
databases = "^0.4.3"
asyncpg = "^0.22.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
