[tool.poetry]
name = "imable-backend"
version = "0.1.0"
description = ""
authors = ["\"Alin Mihaila\" <\"alin.mh996@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi-users = "^6.0.0"
uvicorn = "^0.13.4"
databases = "^0.4.3"
asyncpg = "^0.22.0"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.2"
phonenumbers = "^8.12.22"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
